--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -51,16 +51,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7a2fd5ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       player_id transfer_date from_club_name                  from_club_name  \\\n",
+      "79350       3333    2002-11-09      Leeds U18                             NaN   \n",
+      "79231       3333    2003-09-04          Leeds                    Leeds United   \n",
+      "79226       3333    2003-10-02   Swindon Town                             NaN   \n",
+      "79043       3333    2004-07-02          Leeds                    Leeds United   \n",
+      "78737       3333    2005-08-31      Newcastle  Newcastle United Football Club   \n",
+      "\n",
+      "       to_club_name                    to_club_name  transfer_fee  \n",
+      "79350         Leeds                    Leeds United           0.0  \n",
+      "79231  Swindon Town                             NaN           0.0  \n",
+      "79226         Leeds                    Leeds United           0.0  \n",
+      "79043     Newcastle  Newcastle United Football Club     7400000.0  \n",
+      "78737   Aston Villa       Aston Villa Football Club           0.0  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rayan\\AppData\\Local\\Temp\\ipykernel_12364\\3680337270.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sankey_data[\"transfer_fee\"] = pd.to_numeric(sankey_data[\"transfer_fee\"], errors=\"coerce\").fillna(0)\n",
+      "C:\\Users\\rayan\\AppData\\Local\\Temp\\ipykernel_12364\\3680337270.py:23: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sankey_data[\"transfer_date\"] = pd.to_datetime(sankey_data[\"transfer_date\"], errors=\"coerce\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load datasets\n",
+    "transfers = pd.read_csv(\"data/transfers.csv\")\n",
+    "clubs = pd.read_csv(\"data/clubs.csv\")\n",
+    "\n",
+    "# Merge to get full club names\n",
+    "transfers = transfers.merge(clubs[[\"club_id\", \"name\"]], left_on=\"from_club_id\", right_on=\"club_id\", how=\"left\")\n",
+    "transfers.rename(columns={\"name\": \"from_club_name\"}, inplace=True)\n",
+    "transfers.drop(columns=[\"club_id\"], inplace=True)\n",
+    "\n",
+    "transfers = transfers.merge(clubs[[\"club_id\", \"name\"]], left_on=\"to_club_id\", right_on=\"club_id\", how=\"left\")\n",
+    "transfers.rename(columns={\"name\": \"to_club_name\"}, inplace=True)\n",
+    "transfers.drop(columns=[\"club_id\"], inplace=True)\n",
+    "\n",
+    "# Select only necessary columns\n",
+    "sankey_data = transfers[[\"player_id\", \"transfer_date\", \"from_club_name\", \"to_club_name\", \"transfer_fee\"]]\n",
+    "\n",
+    "# Convert transfer fees to numeric and handle missing values\n",
+    "sankey_data[\"transfer_fee\"] = pd.to_numeric(sankey_data[\"transfer_fee\"], errors=\"coerce\").fillna(0)\n",
+    "\n",
+    "# Convert dates to datetime format and sort data by player and date\n",
+    "sankey_data[\"transfer_date\"] = pd.to_datetime(sankey_data[\"transfer_date\"], errors=\"coerce\")\n",
+    "sankey_data = sankey_data.sort_values(by=[\"player_id\", \"transfer_date\"])\n",
+    "\n",
+    "# Save to CSV for visualization\n",
+    "sankey_data.to_csv(\"processed_data/transfers_preprocessed.csv\", index=False)\n",
+    "\n",
+    "# Show processed data\n",
+    "print(sankey_data.head())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
